# dvh-fam-notebooks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build-image.sh  pyproject.toml  requirements.txt  test_email.py
BB/: bb_berm_en_periode.ipynb  bb_berm_flere_perioder.ipynb  bb_bes_en_periode.ipynb  bb_bis_en_periode.ipynb  berm_bidrag.ipynb  hent_avstemnings_filer.ipynb  hent_valuta_nb.ipynb  mottaker_berm_bidrag.ipynb  mottaker_stonad_bidrag.ipynb  pliktige_berm_bidrag.ipynb  pliktige_stonad_bidrag.ipynb
BB/posisjoner/: barn_berm_posisjoner (2).xlsx  barn_stonad_pos.xlsx  mottaker_berm_posisjoner.xlsx  mottaker_stonad_pos.xlsx  pliktig_berm_posisjoner (1).xlsx  pliktig_stonad_pos.xlsx
EF/: Skolepenger.ipynb
HM/: BS_pipline.ipynb  kopier_BS_data_til_oracle.ipynb  kopier_BS_data_til_oracle_test.ipynb  kopier_ORT_data_til_oracle.ipynb
Kommentarer/: BS_kommentarer.sql
PP/: FAM_PP_STONAD_UR.ipynb  Stønadsstatistikk_final.ipynb  ny_stønadsstatistikk.ipynb  stønadsstatistikk.ipynb
TS/: TS_pipeline.ipynb  kopiere_ts_data_fra_bq_til_oracle.ipynb  kopiere_ts_data_v2_fra_bq_til_oracle.ipynb  kopiere_ts_data_v2_fra_bq_til_oracle_gammel.ipynb
ssb/: barnetrygd.py  ensligforsorger.py  foreldrepenger.py  kobling_mot_oracle.py  kontantstotte.py  kontantstøtte.py  requirements.txt
