[tool.poetry]
name = "dvh-fam-notebooks"
version = "0.1.0"
description = ""
authors = ["AArafaR <97885051+AArafaR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
google-cloud-secret-manager = "^2.15.1"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.5.0"}
cufflinks = "^0.17.3"
pandasql = "^0.7.3"
oracledb = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
